--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^5.0.7",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "ride-hailing-entities": "git+https://github.com/ranaawni/ride-hailing-entities.git#main"
   }
 }
