--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/ranaawni/ride-hailing-app#readme",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20.14.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
@@ -30,12 +31,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "glob": "^10.4.2",
+    "http-status-codes": "^2.3.0",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
+    "ride-hailing-entities": "git+https://github.com/ranaawni/ride-hailing-entities.git#main",
     "rimraf": "^5.0.7",
-    "typeorm": "^0.3.20",
-    "ride-hailing-entities": "git+https://github.com/ranaawni/ride-hailing-entities.git#main"
+    "typeorm": "^0.3.20"
   }
 }
