--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "glob": "^10.4.2",
     "http-status-codes": "^2.3.0",
     "lodash": "^4.17.21",
