--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
+PORT = 5000
 DB_HOST = "ride-hailing-db.cpq8mw08i19v.eu-west-1.rds.amazonaws.com"
 DB_PASSWORD = "admin123&"
 DB_USERNAME = "admin"
 DB_PORT = 3306
 DB_NAME = "ride_hailing"
+AWS_ACCESS_KEY_ID = "AKIA47CR3X3FJHY5KHW7"
+AWS_SECRET_ACCESS_KEY = "7n3iMHuiRvQCbenOEBQ3r28qVzV8P1UFVJCsBZG"
+AWS_REGION = "eu-west-1"
+
