--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   },
   "homepage": "https://github.com/ranaawni/ride-hailing-app#readme",
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/express": "^4.17.21",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20.14.9",
+    "@types/winston": "^2.4.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
   },
   "dependencies": {
+    "aws-sdk": "^2.1652.0",
     "body-parser": "^1.20.2",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
@@ -40,6 +43,8 @@
     "reflect-metadata": "^0.2.2",
     "ride-hailing-entities": "git+https://github.com/ranaawni/ride-hailing-entities.git#main",
     "rimraf": "^5.0.7",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "winston": "^3.13.0",
+    "winston-cloudwatch": "^6.3.0"
   }
 }
