--- a/.github/workflows/ride_hailing.yml
+++ b/.github/workflows/ride_hailing.yml
@@ -24,7 +24,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - name: Install dependencies
+      run: npm ci
     - run: |
         touch .env
         echo "${{secrets.RIDE_HAILING_ENV}}" > .env      
