--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^5.5.2"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.606.0",
     "aws-sdk": "^2.1652.0",
     "body-parser": "^1.20.2",
     "class-validator": "^0.14.1",
