--- a/package.json
+++ b/package.json
@@ -40,8 +40,6 @@
     "reflect-metadata": "^0.2.2",
     "ride-hailing-entities": "git+https://github.com/ranaawni/ride-hailing-entities.git#main",
     "rimraf": "^5.0.7",
-    "typeorm": "^0.3.20",
-    "winston": "^3.13.0",
-    "winston-cloudwatch": "^6.3.0"
+    "typeorm": "^0.3.20"
   }
 }
