--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   },
   "homepage": "https://github.com/ranaawni/ride-hailing-app#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20.14.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
@@ -33,6 +36,7 @@
     "express-validator": "^7.1.0",
     "glob": "^10.4.2",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.4",
