--- a/.github/workflows/ride.yml
+++ b/.github/workflows/ride.yml
@@ -29,4 +29,6 @@ jobs:
       run: npm ci
     - run: |
         touch .env
-        echo "${{secrets.RIDE_HAILING_ENV}}" > .env       
+        echo "${{secrets.RIDE_HAILING_ENV}}" > .env 
+    - run: pm2 restart ride-app
+      
